force-app/main/default/objects/Coupon_Instance__c/Coupon_Instance__c.object-meta.xml
<CustomObject>
    <description>Coupon Instance Object</description>
    <label>Coupon Instance</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Coupon Instance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>