force-app/main/default/objects/Coupon_Instance__c/fields/Allow_Notification__c.field-meta.xml
<CustomField>
    <fullName>Allow_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Notification</label>
    <type>Checkbox</type>
</CustomField>