force-app/main/default/objects/Coupon_Instance__c/fields/Coupon_Item__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon Item Id</label>
    <referenceTo>Coupon_Item__c</referenceTo>
    <relationshipLabel>Coupon Instances</relationshipLabel>
    <relationshipName>Coupon_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>