force-app/main/default/objects/Coupon_Instance__c/fields/Coupon_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Item_Name__c</fullName>
    <formula>Coupon_Item__r.Coupon_Item_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Item Name</label>
    <type>Text</type>
</CustomField>