force-app/main/default/objects/Coupon_Instance__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coupon Instances</relationshipLabel>
    <relationshipName>Coupon_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>