force-app/main/default/objects/Coupon_Instance__c/fields/Extend_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Extend_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extend for Approval</label>
    <type>Checkbox</type>
</CustomField>