force-app/main/default/objects/Coupon_Instance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;VALID&quot;</defaultValue>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>