force-app/main/default/objects/Coupon_Instance__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <formula>Coupon_Item__r.Valid_From__c  +  Coupon_Item__r.Valid_Length_in_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>