force-app/main/default/objects/Coupon_Instance__c/recordTypes/Cash_Coupon_Instance.recordType-meta.xml
<RecordType>
    <fullName>Cash_Coupon_Instance</fullName>
    <active>true</active>
    <description>Cash Coupon Instance</description>
    <label>Cash Coupon Instance</label>
</RecordType>