force-app/main/default/objects/Coupon_Instance__c/recordTypes/Discount_Rate_Coupon_Instance.recordType-meta.xml
<RecordType>
    <fullName>Discount_Rate_Coupon_Instance</fullName>
    <active>true</active>
    <description>Discount Rate Coupon Instance</description>
    <label>Discount Rate Coupon Instance</label>
</RecordType>